fix overflowing on zooming

--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,19 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     height: 100vh;
-    overflow: hidden;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
-    flex: 1;
     align-items: center;
-    /* justify-content: space-between; */
+    justify-content: space-between;
 }
 
 .score {
     text-align: center;
-    padding: 80px;
-    width: 100vw;
+    padding: 70px;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     background-color: darkslategrey;
@@ -26,7 +25,7 @@ body {
 }
 
 .buttons {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-evenly;
     padding: 70px;
@@ -61,7 +60,7 @@ button:hover {
 }
 
 .result {
-    width: 100vw;
+    width: 100%;
     text-align: center;
     padding: 80px;
     background-color: darkslategrey;
